# kotoba

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  mdbook-pages.yml
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  client-config.md  getting-started.md  intro.md  transport.md
docs/src/providers/: anthropic-messages.md  google-gemini.md  openai-chat.md  openai-responses.md  overview.md
src/: client.rs  config.rs  error.rs  lib.rs  stream.rs
src/http/: mod.rs  reqwest.rs
src/provider/: macros.rs  mod.rs  openai_chat.rs  retry.rs
src/provider/anthropic_messages/: error.rs  mod.rs  provider.rs  request.rs  response.rs  stream.rs  types.rs
src/provider/google_gemini/: error.rs  mod.rs  provider.rs  request.rs  response.rs  stream.rs  types.rs
src/provider/openai_chat/: error.rs  mod.rs  provider.rs  request.rs  response.rs  stream.rs  types.rs
src/provider/openai_responses/: error.rs  mod.rs  provider.rs  request.rs  response.rs  stream.rs  types.rs
src/types/: mod.rs
tests/: anthropic_messages_basic.rs  google_gemini_basic.rs  openai_chat_basic.rs  openai_chat_live.rs  openai_responses_basic.rs
