[package]
name = "kotoba-llm"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Unified multi-vendor LLM client abstraction, supporting providers such as OpenAI, Anthropic, Google Gemini, etc."
license = "MIT"
repository = "https://github.com/KitsuneX07/kotoba"
homepage = "https://kitsunex07.github.io/kotoba/"
documentation = "https://docs.rs/kotoba-llm"
readme = "README.md"
keywords = ["llm", "ai", "openai", "anthropic", "gemini"]
categories = ["api-bindings", "asynchronous", "development-tools::testing"]

[dependencies]
async-trait = "0.1"
futures-core = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
dotenvy = "0.15"
base64 = "0.22"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
